Replace calls to deprecated Class#newInstance method
Part of #435 and Bugzilla Id: 62972


git-svn-id: https://svn.apache.org/repos/asf/jmeter/trunk@1847977 13f79535-47bb-0310-9956-ffa450edef68

Former-commit-id: cac54e6fe60bd5287115885d50482c25674b4d00